sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:9: error: not found: value len
    for (i <- 1 to len-1) {
                   ^